--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <div id="carrusel">
         <img src="368693071_234047552961033_2483546004248637421_n.jpg" alt="Foto 1">
         <img src="375041230_242846472081141_8560201301287825020_n.jpg" alt="Foto 2">
-        <img src="imagen/384803452_263562626676192_7709324677710707958_n.jpg" alt="Foto 3">
-        <img src="imagen/166185439_726286491369448_720037540658955087_n.jpg" alt="Foto 4">
-        <img src="imagen/299195151_1013122852685809_327156118425004499_n.jpg" alt="Foto 5">
-        <img src="imagen/368210076_233445859687869_6406570995351570803_n.jpg" alt="Foto 6">
-        <img src="imagen/366295917_233446083021180_2215163072582318606_n.jpg" alt="Foto 7">
+        <img src="384803452_263562626676192_7709324677710707958_n.jpg" alt="Foto 3">
+        <img src="166185439_726286491369448_720037540658955087_n.jpg" alt="Foto 4">
+        <img src="299195151_1013122852685809_327156118425004499_n.jpg" alt="Foto 5">
+        <img src="368210076_233445859687869_6406570995351570803_n.jpg" alt="Foto 6">
+        <img src="366295917_233446083021180_2215163072582318606_n.jpg" alt="Foto 7">
 
         <!-- Agregar más imágenes según sea necesario -->
         <p>Hola buena noche, Pongo tu foto en sinonimo que esto es para ti y fue hecho para ti, no es algo de otro mundo, pero lo hice con mi corazon</p>
@@ -104,7 +104,7 @@
     <p>¿Quisieras que yo fuera tu novio? </p>
     <button id="siButton" onclick="mostrarMensaje('Pongo esta relacion en la mano de DIOS, que todo salga a su volunta, nosotros ponermo de nuestra parte, beso grande conrazon ' )">Sí, acepto</button>
     <button id="noButton" onmouseover="moverBoton()">No</button>
-    <img id="corazon" src="imagen/corazon.png" alt="Corazón"> <!-- Agregar ruta de la imagen del corazón -->
+    <img id="corazon" src="corazon.png" alt="Corazón"> <!-- Agregar ruta de la imagen del corazón -->
 </div>
 
 <script>
